# Heart-Disease-Risk-Predictor

./: .gitignore  Dockerfile  MODEL_COMPARISON.md  README.md  app.py  asgi.py  deploy.bat  deploy.sh  gunicorn.conf.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_backend.bat  run_frontend.bat  server.py  setup.cfg  setup.py  test_api.py  test_flask_api.py  test_model.py  vercel.json  wsgi.py
api/: index.py  requirements.txt
backend/: app.py  main.py  models.py  predictor.py  requirements.txt  test_api.py
frontend/: index.html  model_evaluation.html  script.js  styles.css  test.html  test_frontend.py
model/: create_dummy_models.py  create_models.py  create_simple_models.py
notebook/: enhanced_train_model.py  heart_disease_analysis.ipynb  quick_test.ipynb  train_model.py
