[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-prediction-api"
version = "1.0.0"
description = "API for predicting heart disease risk based on patient data"
dependencies = [
    "fastapi==0.68.0",
    "uvicorn[standard]==0.15.0",
    "scikit-learn==1.0.2",
    "pandas==1.3.3",
    "numpy==1.21.2",
    "pydantic==1.8.2",
    "joblib==1.1.0",
    "typing-extensions==3.10.0"
]

[tool.uvicorn]
app = "backend.app:app"
host = "0.0.0.0"
port = 8002
reload = false